completed section 01 lecture 01

--- a/Sections/01. Essentials/01. Introduction to web server.md
+++ b/Sections/01. Essentials/01. Introduction to web server.md
@@ -1,1 +1,40 @@
 # Introduction to web server
+
+## Essentials
+
+- What is Web Server?
+- Web Server History
+- Web Server Software
+- Examples of Web Server Software
+- Web Servers Usage Statistics
+- What is HTTP?
+- How HTTP Works
+- Apache Web Server
+
+## What is Web Server?
+
+- It is referred to as servers located in data centers
+- It contains the files and webpages for websites
+- Using Internet and HTTP protocol, it delivers and displays the files or websites
+
+## Fundamentals of WorldWideWeb
+
+1. HyperText Markup Language (HTML)
+2. Uniform Resource Identifier (URI)
+3. HyperText Transfer Protocol (HTTP)
+
+## Web Server Software
+
+- It is a software which is installed on a server
+  - transforms the server into a web-server
+- It can be used to serve
+  - static files
+  - dynamic files
+- The content is served using the HTTP Protocol
+
+## Examples of Web Server Software
+
+- Apache HTTP Server
+- Nginx Web Server
+- IIS Web Server
+- ...
